# TELite

./: CMakeLists.txt  README.md  TELiteConfig.cmake.in
.github/workflows/: macos-latest-cpu.yml  ubuntu-latest-cpu.yml
src/: NodeOutputOp.h  SimpleGrid.cpp  SimpleGrid.h  SimpleGridUtilities.cpp  ThresholdOp.h  Variable.cpp
